--- a/app/assets/stylesheets/room_diagram.scss
+++ b/app/assets/stylesheets/room_diagram.scss
@@ -171,4 +171,8 @@ body {
   .end-row-md {
     justify-content: flex-end !important;
   }
+
+  .padding-left {
+    padding-left: 25px !important;
+  }
 }
