--- a/app/views/individual_reservation/new.html.erb
+++ b/app/views/individual_reservation/new.html.erb
@@ -31,7 +31,6 @@
   </div>
 </div>
 
-
 <%= form_with url: "/reservations", method: :post  do |form| %>
   <div class="row">
     <div class="col-lg-6 row">
@@ -141,18 +140,17 @@
               </div>
               <div class="col-lg-6 row">
                 <div class="row">
-                  <div class="col-lg-6 row">
-                    <p class="col-lg-7">Người lớn</p>
-                    <div class="col-lg-5 form-group">
+                  <p class="col-lg-3">Người lớn</p>
+                  <div class="col-lg-7 row" style="padding-right: 0; margin-right: 0">
+                    <div class="col-lg-4  form-group"  style="padding-right: 0; margin-right: 0">
                       <%= form.number_field :adults, in: 0 .. 20, class:"form-control" %>
                     </div>
-                  </div>
-                  <div class="col-lg-6 row">
-                    <p class="col-lg-6">Trẻ em</p>
-                    <div class="col-lg-5 form-group">
-                      <%= form.number_field :children, in: 0 .. 20 ,class:"form-control" %>
+                    <p class="col-lg-4 padding-left">Trẻ em</p>
+                    <div class="col-lg-4 form-group"  style="padding-right: 0; margin-right: 0">
+                      <%= form.number_field :children, in: 0 .. 20 ,class:"form-control " %>
                     </div>
                   </div>
+
                 </div>
               </div>
             </div>
@@ -180,6 +178,7 @@
           <%= form.hidden_field(:employee_id, :value => current_user.employee_id) %>
           <%= form.hidden_field(:room_id, :value => params[:room_id]) %>
           <%#= form.hidden_field(:payment_id, :value => 1) %>
+          <br>
           <div class="d-flex actions justify-content-end">
             <%= form.submit "Save changes", class: "btn btn-primary add_reservation" %>
             <%#= link_to 'Create', room_diagram_quick_reserve_room_path(@reservation) %>
@@ -188,4 +187,18 @@
             <%= link_to 'Destroy', room_diagram_path, data: { dismiss: "modal", confirm:
               'Are you sure?' }, :remote => true, :class => 'btn btn-secondary delete_reservation' %>
           </div>
+
+
+          <script type="text/javascript">
+              $(document).ready(function(){
+                  $('#quickResModal').on('hidden.bs.modal', function () {
+                      $('#quickResModal').remove()
+                  })
+                  $('#total').keyup(function(){
+                      $('#temp-total').val($('#total').val());
+                  })
+              })
+
+          </script>
+
 <% end %>
