Doing multi-step form

--- a/app/views/individual_reservation/new.html.erb
+++ b/app/views/individual_reservation/new.html.erb
@@ -1,204 +1,68 @@
-<div class="steps d-flex flex-wrap flex-sm-nowrap justify-content-between padding-top-2x padding-bottom-1x">
-  <div class="step completed">
-    <div class="step-icon-wrap">
-      <div class="step-icon"><i class="pe-7s-cart"></i></div>
+<h1>Đặt phòng cho khách lẻ</h1>
+<div class="d-flex justify-content-start">
+  <ol class="breadcrumb">
+    <li class="breadcrumb-item"><a href="#">Lễ tân</a></li>
+    <li class="breadcrumb-item" aria-current="page"><a href="#">Khách lẻ</a></li>
+    <li class="breadcrumb-item active" aria-current="page"><a>Đặt phòng</a></li>
+  </ol>
+</div>
+<%= form_with url: "/reservations", method: :post do |form| %>
+  <%#= form.error_messages %>
+<div class="bs-stepper">
+  <div class="bs-stepper-header" role="tablist">
+    <!-- your steps here -->
+    <div class="step" data-target="#logins-part">
+      <button type="button" class="step-trigger" role="tab" aria-controls="logins-part" id="logins-part-trigger">
+        <span class="bs-stepper-circle">1</span>
+        <span class="bs-stepper-label">Logins</span>
+      </button>
     </div>
-    <h4 class="step-title">Confirmed Order</h4>
+    <div class="line"></div>
+    <div class="step" data-target="#information-part">
+      <button type="button" class="step-trigger" role="tab" aria-controls="information-part" id="information-part-trigger">
+        <span class="bs-stepper-circle">2</span>
+        <span class="bs-stepper-label">Various information</span>
+      </button>
+    </div>
   </div>
-  <div class="step completed">
-    <div class="step-icon-wrap">
-      <div class="step-icon"><i class="pe-7s-config"></i></div>
-    </div>
-    <h4 class="step-title">Processing Order</h4>
+  <div class="bs-stepper-content">
+    <!-- your steps content here -->
+<!--  <div id="logins-part" class="content rounded-card p-5" role="tabpanel" aria-labelledby="logins-part-trigger">-->
+      <%= render :partial => "individual_reservation/step#{@reservation.current_step}",  :locals=>{:form=>form} %>
+<!--      </div>-->
+<!--    <div id="information-part" class="content" role="tabpanel" aria-labelledby="information-part-trigger">-->
+      <%#= render 'step2' %>
+<!--    </div>-->
+<!--  </div>-->
   </div>
-  <div class="step completed">
-    <div class="step-icon-wrap">
-      <div class="step-icon"><i class="pe-7s-medal"></i></div>
-    </div>
-    <h4 class="step-title">Quality Check</h4>
-  </div>
-  <div class="step">
-    <div class="step-icon-wrap">
-      <div class="step-icon"><i class="pe-7s-car"></i></div>
-    </div>
-    <h4 class="step-title">Product Dispatched</h4>
-  </div>
-  <div class="step">
-    <div class="step-icon-wrap">
-      <div class="step-icon"><i class="pe-7s-home"></i></div>
-    </div>
-    <h4 class="step-title">Product Delivered</h4>
+
+  <br>
+  <br>
+  <div class="d-flex actions justify-content-center">
+    <p><%= form.submit "Continue", class:"btn btn-primary" %></p>
+    <span style="width:10px"></span>
+    <p><%= form.submit "Back", :name => "back_button", class:"btn btn-secondary" unless @reservation.first_step? %></p>
   </div>
 </div>
-
-<%= form_with url: "/reservations", method: :post  do |form| %>
-  <div class="row">
-    <div class="col-lg-6 row">
-      <div class="row end-row-md">
-        <p class="col-lg-3">Tên khách</p>
-        <div class="col-lg-7 form-group">
-          <%= form.text_field :client_name, class:"form-control", placeholder: "Nguyễn Văn A" %>
-          <!--            <small id="emailHelp" class="form-text text-muted">Email helpers</small>-->
-        </div>
-      </div>
-    </div>
-    <div class="col-lg-6 row">
-      <div class="row row">
-        <p class="col-lg-3">CCCD</p>
-        <div class="col-lg-7 form-group">
-          <%= form.number_field   :client_citizen_id, class:"form-control", placeholder: "0123456789" %>
-          <!--            <small id="emailHelp" class="form-text text-muted">Email helpers</small>-->
-        </div>
-      </div>
-    </div>
-  </div>
-  <div class="row">
-    <div class="col-lg-6 row">
-      <div class="row end-row-md">
-        <p class="col-lg-3">Loại phòng</p>
-        <div class="col-lg-7 form-group">
-          <%= form.label @room_type_name, class:"form-control", readonly:true %>
-          <!--            <small id="emailHelp" class="form-text text-muted">Email helpers</small>-->
-        </div>
-      </div>
-    </div>
-    <div class="col-lg-6 row">
-      <div class="row">
-        <p class="col-lg-3">Phòng</p>
-        <div class="col-lg-7 form-group">
-          <%= form.label @room_name, class:"form-control", readonly:true %>
-          <!--            <small id="emailHelp" class="form-text text-muted">Email helpers</small>-->
-        </div>
-      </div>
-    </div>
-  </div>
-  <div class="row">
-    <div class="col-lg-6 row">
-      <div class="row row end-row-md">
-        <p class="col-lg-3">Ngày đến</p>
-        <div class="col-lg-7 form-group">
-          <%= form.text_field :arrival_date,
-                              data: {
-                                controller: "flatpickr",
-                                flatpickr_date_format: "d-m-Y",
-                                flatpickr_min_date: Time.zone.now
-                              },
-                              class: "form-control read-only-white",
-                              placeholder: "Chọn ngày đến"%>
-          <!--            <small id="emailHelp" class="form-text text-muted">Email helpers</small>-->
-        </div>
-      </div>
-    </div>
-    <div class="col-lg-6 row">
-      <div class="row row">
-        <p class="col-lg-3">Giá phòng</p>
-        <div class="col-lg-7 form-group">
-          <%= form.label @room_price, class:"form-control", readonly:true %>
-        </div>
-      </div>
-    </div>
-  </div>
-  <div class="row">
-    <div class="col-lg-6 row">
-      <div class="row end-row-md">
-        <p class="col-lg-3">Ngày đi</p>
-        <div class="col-lg-7 form-group">
-          <%= form.text_field :leave_date,
-                              data: {
-                                controller: "flatpickr",
-                                flatpickr_date_format: "d-m-Y",
-                                flatpickr_min_date: Time.zone.now
-                              },
-                              class: "form-control read-only-white",
-                              placeholder: "Chọn ngày đi"%>
-          <!--            <small id="emailHelp" class="form-text text-muted">Email helpers</small>-->
-        </div>
-      </div>
-    </div>
-    <div class="col-lg-6 row">
-      <div class="row">
-        <p class="col-lg-3">Đặt cọc</p>
-        <div class="col-lg-7 form-group">
-          <%= form.fields_for :payment_attributes, Payment.new do |p| %>
-            <%= p.hidden_field(:reservation_date, :value => Date.today)  %>
-            <%= p.hidden_field(:is_paid, :value => false)  %>
-            <%= p.number_field :deposit, min: 0, class:"form-control"%>
-            </div>
-            </div>
-            </div>
-            </div>
-            <div class="row">
-              <div class="col-lg-6 row">
-                <div class="row end-row-md">
-                  <p class="col-lg-3">Hình thức TT</p>
-                  <div class="col-lg-7 form-group">
-                    <%= p.select :payment_type, options_for_select(@payment_type_view), {}, class: "form-control read-only-white" %>
-                    <!--            <small id="emailHelp" class="form-text text-muted">Email helpers</small>-->
-
-                  </div>
-                </div>
-              </div>
-              <div class="col-lg-6 row">
-                <div class="row">
-                  <p class="col-lg-3">Người lớn</p>
-                  <div class="col-lg-7 row" style="padding-right: 0; margin-right: 0">
-                    <div class="col-lg-4  form-group"  style="padding-right: 0; margin-right: 0">
-                      <%= form.number_field :adults, in: 0 .. 20, class:"form-control" %>
-                    </div>
-                    <p class="col-lg-4 padding-left">Trẻ em</p>
-                    <div class="col-lg-4 form-group"  style="padding-right: 0; margin-right: 0">
-                      <%= form.number_field :children, in: 0 .. 20 ,class:"form-control " %>
-                    </div>
-                  </div>
-
-                </div>
-              </div>
-            </div>
-            <div class="row">
-              <div class="col-lg-6 row">
-                <div class="row end-row-md">
-                  <p class="col-lg-3">Loại đặt phòng</p>
-                  <div class="col-lg-7 form-group">
-                    <%= form.select @reservation_type_chosen, options_for_select(@reservation_type_view), {}, class: "form-control read-only-white" %>
-                  </div>
-                </div>
-              </div>
-              <div class="col-lg-6 row">
-                <div class="row">
-                  <p class="col-lg-3">Tổng tiền</p>
-                  <div class="col-lg-7 form-group">
-                    <%= form.number_field :total, min: 0, class:"form-control", id: "total"%>
-                    <%= p.hidden_field(:temp_total, :id=> "temp-total")  %>
-          <% end %>
-          </div>
-          </div>
-          </div>
-          </div>
-          <%= form.hidden_field(:client_id, :value => 1) %>
-          <%= form.hidden_field(:employee_id, :value => current_user.employee_id) %>
-          <%= form.hidden_field(:room_id, :value => params[:room_id]) %>
-          <%#= form.hidden_field(:payment_id, :value => 1) %>
-          <br>
-          <div class="d-flex actions justify-content-end">
-            <%= form.submit "Save changes", class: "btn btn-primary add_reservation" %>
-            <%#= link_to 'Create', room_diagram_quick_reserve_room_path(@reservation) %>
-            <%#= link_to 'Create', room_diagram_quick_reserve_room_path(@reservation, arrival_date: @reservation.arrival_date, leave_date: @reservation.leave_date, client_name: @reservation.client_name, client_citizen_id: @reservation.client_citizen_id, children: @reservation.children, adults: @reservation.adults, client_id: @reservation.client_id, employee_id: @reservation.employee_id, room_id: @reservation.room_id, payment_id: @reservation.payment_id), method: :post	 %>
-            <span style="width:10px"></span>
-            <%= link_to 'Destroy', room_diagram_path, data: { dismiss: "modal", confirm:
-              'Are you sure?' }, :remote => true, :class => 'btn btn-secondary delete_reservation' %>
-          </div>
-
-
-          <script type="text/javascript">
-              $(document).ready(function(){
-                  $('#quickResModal').on('hidden.bs.modal', function () {
-                      $('#quickResModal').remove()
-                  })
-                  $('#total').keyup(function(){
-                      $('#temp-total').val($('#total').val());
-                  })
-              })
-
-          </script>
-
 <% end %>
+
+
+<script>
+    $(document).ready(function () {
+        var stepper = new Stepper($('.bs-stepper')[0])
+    })
+
+    var stepperEl = document.getElementById('stepper')
+    var stepper = new Stepper(stepperEl)
+
+    stepperEl.addEventListener('show.bs-stepper', function (event) {
+        // You can call preventDefault to stop the rendering of your step
+        // event.preventDefault()
+
+        console.warn(event.detail.indexStep)
+    })
+
+    stepperEl.addEventListener('shown.bs-stepper', function (event) {
+        console.warn('step shown')
+    })
+</script>
