--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -34,12 +34,12 @@
           <% end %>
         </li>
         <li id="individual">
-          <%= link_to individual_reservation_path do %>
+          <%= link_to reservations_path do %>
             <span class="fa fa-briefcase"></span> Khách lẻ
           <% end %>
         </li>
         <li id="cooperate">
-          <%= link_to cooperate_reservation_path do %>
+          <%= link_to reservations_path do %>
             <span class="fa fa-users"></span> Khách đoàn
           <% end %>
         </li>
