--- a/app/views/reservations/_form.html.erb
+++ b/app/views/reservations/_form.html.erb
@@ -1,4 +1,5 @@
-<%= form_with(model: reservation) do |form| %>
+<%= form_with url: "/reservations", method: :post do |form| %>
+
   <% if reservation.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(reservation.errors.count, "error") %> prohibited this reservation from being saved:</h2>
@@ -10,18 +11,66 @@
       </ul>
     </div>
   <% end %>
-
-  <div class="field">
-    <%= form.label :arrival_date %>
-    <%= form.datetime_select :arrival_date %>
+  <h1>Đặt phòng cho khách lẻ</h1>
+  <div class="d-flex justify-content-start">
+    <ol class="breadcrumb">
+      <li class="breadcrumb-item"><a href="#">Lễ tân</a></li>
+      <li class="breadcrumb-item" aria-current="page"><a href="#">Khách lẻ</a></li>
+      <li class="breadcrumb-item active" aria-current="page"><a>Đặt phòng</a></li>
+    </ol>
   </div>
+    <div class="bs-stepper">
+      <div class="bs-stepper-header" role="tablist">
+        <div class="step" data-target="#logins-part">
+          <button type="button" class="step-trigger" role="tab" aria-controls="logins-part" id="logins-part-trigger">
+            <span class="bs-stepper-circle">1</span>
+            <span class="bs-stepper-label">Logins</span>
+          </button>
+        </div>
+        <div class="line"></div>
+        <div class="step" data-target="#information-part">
+          <button type="button" class="step-trigger" role="tab" aria-controls="information-part" id="information-part-trigger">
+            <span class="bs-stepper-circle">2</span>
+            <span class="bs-stepper-label">Various information</span>
+          </button>
+        </div>
+      </div>
+      <div class="bs-stepper-content">
+        <!-- your steps content here -->
+        <!--  <div id="logins-part" class="content rounded-card p-5" role="tabpanel" aria-labelledby="logins-part-trigger">-->
+        <%= render :partial => "step#{reservation.current_step}",  :locals=>{:form=>form} %>
+        <!--      </div>-->
+        <!--    <div id="information-part" class="content" role="tabpanel" aria-labelledby="information-part-trigger">-->
+        <%#= render 'step2' %>
+        <!--    </div>-->
+        <!--  </div>-->
+      </div>
 
-  <div class="field">
-    <%= form.label :leave_date %>
-    <%= form.datetime_select :leave_date %>
-  </div>
+      <br>
+      <br>
+      <div class="d-flex actions justify-content-center">
+        <p><%= form.submit "Continue", class:"btn btn-primary" unless @reservation.last_step?  %></p>
+        <span style="width:10px"></span>
+        <p><%= form.submit "Back", :name => "back_button", class:"btn btn-secondary" unless @reservation.first_step? %></p>
+      </div>
+    </div>
+  <script>
+      $(document).ready(function () {
+          var stepper = new Stepper($('.bs-stepper')[0])
+      })
 
-  <div class="actions">
-    <%= form.submit %>
-  </div>
+      var stepperEl = document.getElementById('stepper')
+      var stepper = new Stepper(stepperEl)
+
+      stepperEl.addEventListener('show.bs-stepper', function (event) {
+          // You can call preventDefault to stop the rendering of your step
+          // event.preventDefault()
+
+          console.warn(event.detail.indexStep)
+      })
+
+      stepperEl.addEventListener('shown.bs-stepper', function (event) {
+          console.warn('step shown')
+      })
+  </script>
 <% end %>
