--- a/app/views/reservations/edit.html.erb
+++ b/app/views/reservations/edit.html.erb
@@ -1,6 +1,6 @@
 <h1>Editing Reservation</h1>
 
-<%= render 'form', reservation: @reservation %>
+<%#= render 'form', reservation: @reservation %>
 
 <%= link_to 'Show', @reservation %> |
 <%= link_to 'Back', reservations_path %>
