--- a/app/views/reservations/_step2.html.erb
+++ b/app/views/reservations/_step2.html.erb
@@ -1,9 +1,10 @@
+<%= form.fields_for :customer_attributes, Client.new do |customer| %>
 <div class="row">
   <div class="col-lg-6 row">
     <div class="row end-row-md">
       <p class="col-lg-3">Tên khách</p>
       <div class="col-lg-7 form-group">
-        <%= form.text_field :client_name, class:"form-control", placeholder: "Nguyễn Văn A" %>
+        <%= customer.text_field :name, class:"form-control", placeholder: "Nguyễn Văn A" %>
         <!--            <small id="emailHelp" class="form-text text-muted">Email helpers</small>-->
       </div>
     </div>
@@ -12,7 +13,7 @@
     <div class="row row">
       <p class="col-lg-3">CCCD</p>
       <div class="col-lg-7 form-group">
-        <%= form.number_field   :client_citizen_id, class:"form-control", placeholder: "0123456789" %>
+        <%= customer.number_field   :citizen_id, class:"form-control", placeholder: "0123456789" %>
         <!--            <small id="emailHelp" class="form-text text-muted">Email helpers</small>-->
       </div>
     </div>
@@ -23,7 +24,14 @@
     <div class="row end-row-md">
       <p class="col-lg-3">Sinh nhật</p>
       <div class="col-lg-7 form-group">
-        <%= form.text_field :client_name, class:"form-control", placeholder: "Nguyễn Văn A" %>
+        <%= customer.text_field :date_of_birth,
+                            data: {
+                              controller: "flatpickr",
+                              flatpickr_date_format: "d-m-Y",
+                              flatpickr_min_date: Time.zone.now
+                            },
+                            class: "form-control read-only-white",
+                            placeholder: "Chọn sinh nhật"%>
         <!--            <small id="emailHelp" class="form-text text-muted">Email helpers</small>-->
       </div>
     </div>
@@ -32,7 +40,8 @@
     <div class="row row">
       <p class="col-lg-3">Giới tính</p>
       <div class="col-lg-7 form-group">
-        <%= form.number_field   :client_citizen_id, class:"form-control", placeholder: "0123456789" %>
+        <%= customer.select :gender, options_for_select(@payment_type_view), {}, class: "form-control read-only-white" %>
+
         <!--            <small id="emailHelp" class="form-text text-muted">Email helpers</small>-->
       </div>
     </div>
@@ -43,7 +52,7 @@
     <div class="row end-row-md">
       <p class="col-lg-3">Số điện thoại</p>
       <div class="col-lg-7 form-group">
-        <%= form.text_field :client_name, class:"form-control", placeholder: "Nguyễn Văn A" %>
+        <%= customer.telephone_field   :phone_number, class:"form-control", placeholder: "0123456789" %>
         <!--            <small id="emailHelp" class="form-text text-muted">Email helpers</small>-->
       </div>
     </div>
@@ -52,7 +61,7 @@
     <div class="row row">
       <p class="col-lg-3">Email</p>
       <div class="col-lg-7 form-group">
-        <%= form.number_field   :client_citizen_id, class:"form-control", placeholder: "0123456789" %>
+        <%= customer.email_field   :email, class:"form-control", placeholder: "ngan@gmail.com" %>
         <!--            <small id="emailHelp" class="form-text text-muted">Email helpers</small>-->
       </div>
     </div>
@@ -61,11 +70,13 @@
 <div class="row">
   <div class="col-lg-6 row">
     <div class="row end-row-md">
-      <p class="col-lg-3">Địa chỉ</p>
+      <p class="col-lg-3">Quốc tịch</p>
       <div class="col-lg-7 form-group">
-        <%= form.text_field :client_name, class:"form-control", placeholder: "Nguyễn Văn A" %>
-        <!--            <small id="emailHelp" class="form-text text-muted">Email helpers</small>-->
+        <%= customer.text_field :nationality, class:"form-control", placeholder: "Nguyễn Văn A" %>
+<!--            <small id="emailHelp" class="form-text text-muted">Email helpers</small>-->
       </div>
     </div>
   </div>
+  <%= customer.hidden_field(:client_type, :value => 2) %>
 </div>
+<% end %>
