--- a/app/views/room_types/index.html.erb
+++ b/app/views/room_types/index.html.erb
@@ -4,7 +4,7 @@
   </div>
 <% end %>
 
-<h1 class="title">Room Types</h1>
+<center><h1 class="title">Room Types</h1></center>
 <div class="roomtype_sum_container tRow">
     <div>
         Danh sach loai phong ( <%= @room_types.ids.count %> )
