Fix bug client inputs

--- a/app/views/reservations/_step1.html.erb
+++ b/app/views/reservations/_step1.html.erb
@@ -87,13 +87,15 @@
     </div>
   </div>
 </div>
-<%= form.hidden_field(:client_id, :value => 1) %>
+<%#= form.hidden_field(:client_id, :value => 1) %>
 <%= form.hidden_field(:employee_id, :value => current_user.employee_id) %>
 <%= form.hidden_field(:room_id, :value => @room_id) %>
 <script>
     <% if session[:reservation_params] %>
     $('#arrival_date').val("<%= session[:reservation_params]["arrival_date"] %>")
     $('#leave_date').val("<%= session[:reservation_params]["leave_date"] %>")
+    $('#adults').val("<%= session[:reservation_params]["adults"] %>")
+    $('#children').val("<%= session[:reservation_params]["children"] %>")
 
      <% end %>
 </script>
