Adding payment view

--- a/app/views/reservations/_step1.html.erb
+++ b/app/views/reservations/_step1.html.erb
@@ -92,10 +92,10 @@
 <%= form.hidden_field(:room_id, :value => @room_id) %>
 <script>
     <% if session[:reservation_params] %>
-    $('#arrival_date').val("<%= session[:reservation_params]["arrival_date"] %>")
-    $('#leave_date').val("<%= session[:reservation_params]["leave_date"] %>")
-    $('#adults').val("<%= session[:reservation_params]["adults"] %>")
-    $('#children').val("<%= session[:reservation_params]["children"] %>")
-
+      <% params = session[:reservation_params] %>
+        $('#arrival_date').val("<%= params["arrival_date"] %>")
+        $('#leave_date').val("<%= params["leave_date"] %>")
+        $('#adults').val("<%= params["adults"] %>")
+        $('#children').val("<%= params["children"] %>")
      <% end %>
 </script>
