--- a/app/views/reservations/_form.html.erb
+++ b/app/views/reservations/_form.html.erb
@@ -11,7 +11,6 @@
       </ul>
     </div>
   <% end %>
-  <h1>Đặt phòng cho khách lẻ</h1>
   <div class="d-flex justify-content-start">
     <ol class="breadcrumb">
       <li class="breadcrumb-item"><a href="#">Lễ tân</a></li>
@@ -20,21 +19,21 @@
     </ol>
   </div>
     <div class="bs-stepper">
-      <div class="bs-stepper-header" role="tablist">
-        <div class="step" data-target="#logins-part">
-          <button type="button" class="step-trigger" role="tab" aria-controls="logins-part" id="logins-part-trigger">
-            <span class="bs-stepper-circle">1</span>
-            <span class="bs-stepper-label">Logins</span>
-          </button>
-        </div>
-        <div class="line"></div>
-        <div class="step" data-target="#information-part">
-          <button type="button" class="step-trigger" role="tab" aria-controls="information-part" id="information-part-trigger">
-            <span class="bs-stepper-circle">2</span>
-            <span class="bs-stepper-label">Various information</span>
-          </button>
-        </div>
-      </div>
+<!--      <div class="bs-stepper-header" role="tablist">-->
+<!--        <div class="step" data-target="#logins-part">-->
+<!--          <button type="button" class="step-trigger" role="tab" aria-controls="logins-part" id="logins-part-trigger">-->
+<!--            <span class="bs-stepper-circle">1</span>-->
+<!--            <span class="bs-stepper-label">Logins</span>-->
+<!--          </button>-->
+<!--        </div>-->
+<!--        <div class="line"></div>-->
+<!--        <div class="step" data-target="#information-part">-->
+<!--          <button type="button" class="step-trigger" role="tab" aria-controls="information-part" id="information-part-trigger">-->
+<!--            <span class="bs-stepper-circle">2</span>-->
+<!--            <span class="bs-stepper-label">Various information</span>-->
+<!--          </button>-->
+<!--        </div>-->
+<!--      </div>-->
       <div class="bs-stepper-content">
         <!-- your steps content here -->
         <!--  <div id="logins-part" class="content rounded-card p-5" role="tabpanel" aria-labelledby="logins-part-trigger">-->
