--- a/app/views/room_diagram/_quick_reserve_room.html.erb
+++ b/app/views/room_diagram/_quick_reserve_room.html.erb
@@ -141,13 +141,19 @@
       </div>
     </div>
   </div>
-  <%= form.hidden_field(:client_id, :value => 1) %>
+  <%= form.fields_for :client_attributes, Client.new do |customer| %>
+    <%= customer.hidden_field(:client_id, :value => 1) %>
+    <%= customer.hidden_field(:name, :value => Client.find(1).name) %>
+    <%= customer.hidden_field(:citizen_id, :value => Client.find(1).citizen_id) %>
+  <% end %>
+  <%#= form.hidden_field(:client_attributes, :value => Client.find(1)) %>
+  <%#= form.hidden_field(:client_id, :value => 1) %>
   <%= form.hidden_field(:employee_id, :value => current_user.employee_id) %>
   <%= form.hidden_field(:room_id, :value => params[:room_id]) %>
   <%#= form.hidden_field(:payment_id, :value => 1) %>
   <br>
   <div class="d-flex actions justify-content-end">
-    <%= form.submit "Save changes", class: "btn btn-primary add_reservation" %>
+    <%= form.submit "Save changes", class: "btn btn-primary add_reservation", data: { disable_with: false } %>
     <%#= link_to 'Create', room_diagram_quick_reserve_room_path(@reservation) %>
     <%#= link_to 'Create', room_diagram_quick_reserve_room_path(@reservation, arrival_date: @reservation.arrival_date, leave_date: @reservation.leave_date, client_name: @reservation.client_name, client_citizen_id: @reservation.client_citizen_id, children: @reservation.children, adults: @reservation.adults, client_id: @reservation.client_id, employee_id: @reservation.employee_id, room_id: @reservation.room_id, payment_id: @reservation.payment_id), method: :post	 %>
     <span style="width:10px"></span>
